--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
             </div>
             <div class="row">
                 <p class="content">
-                    <strong>우리학교, 우리과 친구들과 쉽게 전공책 거래하기!</strong>
+                    <strong>우리학교, 같은 학과 친구들과 쉽게 전공책 거래하기!</strong>
                     <br>
-                    BooKU는 건국대학생 서울캠퍼스 학생이라면 누구나 쉽게 전공책을 거래할 수 있는 플랫폼입니다.
+                    BooKU는 건국대학교 학생이라면 누구나 쉽게 전공책을 거래할 수 있는 플랫폼입니다. 같은 학과 선후배들과 교류하고 싶다면 도서등록시 학과제한을 설정해주세요!
                 </p>
             </div>
         </div>
